syntax = "proto3";

import "google/protobuf/timestamp.proto";

package chat;

message ChatRequest {
  string name = 1;
  string message = 3;
  google.protobuf.Timestamp my_field = 2;
}


message ChatResponse {
  string name = 1;
  string message = 3;
  google.protobuf.Timestamp my_field = 2;
}

/* SendChat - unary
* SendMultipleChat - client side streaming
* ReceiveMultiplaChat - server side streaming */

service ChatService {
  rpc SendChat(ChatRequest) returns (ChatResponse);
  rpc SendMultipleChat(stream ChatRequest) returns (ChatResponse);
  rpc ReceiveMultipleChat(ChatRequest) returns (stream ChatResponse);
}